fixed responsiveness of project cards on mobile

--- a/css/components/container.css
+++ b/css/components/container.css
@@ -119,7 +119,7 @@
 }
 
 @media only screen and (min-width: 768px) {
-  .projects-container {grid-template-columns: repeat(1, 1fr);}
+  .projects-container {grid-template-columns: repeat(2, 1fr);}
   .skills-container {
     grid-template-columns: repeat(4, 1fr);
     gap: 40px;
